# RingConn-CP-Daily

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
config/: competitors.json
ringwatch/: __init__.py  cli.py  config.py  feishu.py  fetchers.py  formatters.py  models.py  pipeline.py  state.py
tests/: test_feishu.py  test_pipeline.py  test_rss.py
